Changes in quota-tools form 3.10 to 3.11
* added -T flag to quot(8) to avoid truncation of names (Andre Nathan)
* added -q flag to quot(8) to avoid sorting of names (Andre Nathan)
* added #include <paths.h> in quotasys.c to avoid compile problems on some systems (Jan Kara)

Changes in quota-tools from 3.09 to 3.10
* alternative port can be specified to rpc.rquotad by -p option (Jan Kara)
* Fixed processing of device-backed loop mounts (Jari Ruusu)
* Fixed fake error messages from rpc.rquotad (Jan Kara)
* quota(1) now does not print info for NFS filesystems without quotas (Jan Kara)
* XFS roothack option disabled by default (Nathan Scott)
* added option to warnquota(8) to supress details of report (Marco van Wieringen)
* fixed problems with multiple lines values in warnquota(8) (F. Depke)
* changed detection of kernel interface so that it works even without /proc (Jan Kara, Johan Ekenberg)
* updated Polish messages (Jakub Bogusz)
* updated quotactl(2) manpage (Jan Kara)
* fixed bug in -f option of edquota(8) (Jan Kara)
* fixed formatting bug in warnquota(8) (Jan Kara)
* added option -s (choice of more appropriate units) to warnquota(8) (Jan Kara)

Changes in quota-tools from 3.08 to 3.09
* minor update of quota(1) manpage (Jan Kara)
* quotacheck(8) now remembers only hardlinked files and not all inodes with
  n_link > 1 (Jan Kara, Jan Kasprzak)
* quotacheck(8) doesn't store structures for all users in old quota format  (Jan Kasprzak)
* fixed minor bug in documentation (Jan Kara, Lucas Brasilino)
* repquota(8) handles multiple entries in /etc/passwd better (Jan Kara)
* made tools not to touch mountpoints mounted without quota options (Jan Kara)
* added option for ignoring autofs mountpoints to quota(1), quot(8), repquota(8) and rpc.rquotad(8) (Jan Kara, Paul Szabo)
* updated xqmstats (Nathan Scott)

Changes in quota-tools from 3.07 to 3.08
* Fixed infinite loop in quotacheck under RH7.1 (?)
* Made quota tools aware of /etc/services (H. J. Lu)